# trylock

./: .gitignore  AEGIS_Claude_Code_Prompt.md  AEGIS_Evaluation_Colab.ipynb  AEGIS_v2_Specification.md  ARXIV_QUICK_REFERENCE.txt  ARXIV_SUBMISSION.md  CHANGELOG.md  COLAB_STEP_BY_STEP.md  DELETE_OLD_AEGIS_REPOS.md  DEPLOYMENT_OFFICIAL.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EVALUATION_STATUS.md  GCP_VM_SETUP.md  HUGGINGFACE_MIGRATION_PLAN.md  LICENSE  LOCK_DOWN_DATASET.md  MIGRATION_COMPLETE.md  PAPER_FIXES_COMPLETE.md  PAPER_POLISH_CHECKLIST.md  README.md  REBRAND_COMPLETE.md  RUN_EVALUATION_NOW.md  RUN_FULL_AEGIS_EVAL.md  RUN_FULL_TRYLOCK_EVAL.md  SECURITY.md  SEGFAULT_FIX.md  TRYLOCK_Claude_Code_Prompt.md  TRYLOCK_v2_Specification.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: eval_jailbreakbench.py
data/: benign_prompt_generator.py
data/public_sample/: README.md  aegis_sample.jsonl
data/schema/: trajectory_schema.json  validator.py
demo/: AEGIS_Demo.ipynb  README.md  VIDEO_SCRIPT.md  app.py  requirements.txt
deployment/: __init__.py  gateway.py  intervention.py  prometheus.yml  sidecar_service.py  trylock_gateway.py
deployment/configs/: development.yaml  production.yaml
eval/: __init__.py  alpha_anomaly_suite.py  harness.py  human_labeling.py  judges.py  metrics.py  sidecar_calibration.py
generation/: __init__.py  activation_capture.py  judge_bot.py  mutation_engine.py  pipeline.py  red_bot.py  victim_bot.py
generation/prompts/: judge_bot_system.md  red_bot_system.md
huggingface/trylock-dataset/: LICENSE  README.md  test.jsonl  val.jsonl
huggingface/trylock-mistral-7b-dpo/: README.md  adapter_config.json
huggingface/trylock-repe-vectors/: README.md  repe_config.json
huggingface/trylock-sidecar-classifier/: README.md  adapter_config.json  thresholds.json
paper/: AEGIS_Canonical.md  AEGIS_Paper_Draft.md  EXPANSION_COMPLETE.md  FIGURE_SPECIFICATIONS.md  FINAL_STATUS.md  PAPER_EXPANSION_PLAN.md  QUICK_RESPONSE_TO_REVIEWER.md  REVIEWER_FIXES_COMPLETE.md  REVISION_ROUND_2_COMPLETE.md  TRYLOCK_Canonical.md  TRYLOCK_Paper_Draft.md  aegis.md  comparison_table.md  generate_figures.py  trylock.md  trylock.tex
scripts/: convert_dpo_to_sidecar.py  create_public_sample.py  debug_imports.py  diversify_personas.py  eval_cpu_only.py  eval_full_aegis_standalone.py  eval_full_trylock_standalone.py  format_dpo.py  generate_data.py  generate_parallel.py  generate_trajectories.py  make_dataset_private.py  run_eval.py  run_eval.sh  run_eval_full_aegis.py  run_eval_full_trylock.py  run_full_evaluation.py  step_by_step_test.py  test_component_loading.py  test_generation.py  test_imports_only.py  test_minimal.py  test_minimal_imports.py  test_model_loading.py  test_one_by_one.py  ungated_models.py  upload_public_sample.py  validate_data.py
taxonomy/v2.0/: attack_families.yaml  attack_stages.yaml  labeling_guide.md  manipulation_tactics.yaml  response_types.yaml
tests/: test_generation.py  test_schema.py  test_sidecar_integration.py
training/: GCP_SETUP.md  __init__.py  activation_capture.py  dpo_preference.py  eval_repe.py  layer0_canonicalization.py  repe_steering.py  repe_training.py  requirements.txt  sft_warmup.py  sidecar_classifier.py  train_dpo.py  train_repe.py
(+5 files in other folders)
